<resources>
    <string name="app_name">OldeeExpert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">Oldee</string>

    <!--dialog-->
    <!--service error-->
    <string name="dialog_service_error_0">서비스 이용 안내</string>
    <string name="dialog_service_error_1">서비스 이용에 불편을 드려 죄송합니다.\n현재 서비스를 이용이 불가합니다.</string>
    <string name="dialog_service_error_2">재시도를 통해서 문제가 해결되지 않는 경우\n카카오톡 채널"수상한수선집"을 통해 문의해주세요.</string>

    <!--service check-->
    <string name="dialog_service_check_0">서비스 점검 안내</string>
    <string name="dialog_service_check_1">서비스 안정화를 위한 점검이 진행중입니다.\n점검일시: YYYY년 MM월 DD일 HH:mm ~ HH:mm</string>
    <string name="dialog_service_check_2">빠른 시간 안에 서비를 재개할 수 있도록\n최선을 다하겠습니다.</string>

    <!--permission info-->
    <string name="dialog_permission_info_top_title">접근권한 안내</string>
    <string name="dialog_permission_info_top_contents">서비스 사용을 위해 아래의 권한 허용이 필요합니다.</string>
    <string name="dialog_permission_info_item0_title">카메라</string>
    <string name="dialog_permission_info_item0_contents">제품 등록, 글 작성 및 프로필 이미지 첨부</string>
    <string name="dialog_permission_info_item1_title">사진\/미디어\/파일</string>
    <string name="dialog_permission_info_item1_contents">제품 등록, 글 작성 및 프로필 이미지 첨부</string>
    <string name="dialog_permission_info_bottom">접근 권한은 더 나은 서비스를 제공하기 위해 사용되며, 허용하지 않아도 서비스 이용이 가능합니다.</string>

    <!--force update-->
    <string name="dialog_update_force_title">업데이트 안내</string>
    <string name="dialog_update_force_contents">중요한 업데이트가 있습니다.\n서비스 이용을 위해 지금 바로 업데이트하세요.</string>

    <string name="dialog_update_normal_title">업데이트 안내</string>
    <string name="dialog_update_normal_contents">중요한 업데이트가 있습니다.\n서비스 이용을 위해 지금 바로 업데이트하세요.</string>

    <!--splash-->
    <string name="splash_top_0">수선의 모든 것</string>
    <string name="splash_top_1">수상한</string>
    <string name="splash_top_2">oldee</string>
    <string name="splash_bottom">수상한팩토리</string>

    <!--bottom nav-->
    <string name="bottom_nav_item_0">주문현황</string>
    <string name="bottom_nav_item_1">고객문의</string>
    <string name="bottom_nav_item_2">디자인</string>
    <string name="bottom_nav_item_3">더보기</string>


    <!--order top tab-->
    <string name="order_top_tab_0">전체</string>
    <string name="order_top_tab_1">신규</string>
    <string name="order_top_tab_2">진행중</string>
    <string name="order_top_tab_3">완료</string>

    <!--more-->
    <string name="more_my_item_0">정산 관리</string>
    <string name="more_my_item_1">계정 관리</string>

    <string name="more_common_item_0">공지사항</string>
    <string name="more_common_item_1">문의하기</string>
    <string name="more_common_item_2">약관 및 정책</string>

    <string name="more_common_item_version">%s</string>

    <!--design top tab-->
    <string name="design_top_tab_0">전체</string>
    <string name="design_top_tab_1">판매중</string>
    <string name="design_top_tab_2">판매중지</string>

    <!--design blank-->
    <string name="design_blank_big">등록된 디자인이 없습니다.</string>
    <string name="design_blank_small">\n리폼 디자인을 등록해 주세요.</string>
    <string name="design_blank_btn">디자인 등록</string>

    <!--design detail-->
    <string name="dialog_design_detail_start_title">판매중으로 변경하시겠습니까?</string>
    <string name="dialog_design_detail_start_contents">사용자들이 구매를 하거나 문의를 남길 수 있습니다.\n" + "판매를 시작한 디자인은 수정 및 삭제가 불가능합니다.</string>

    <string name="dialog_design_detail_stop_title">판매중지로 변경하시겠습니까?</string>
    <string name="dialog_design_detail_stop_contents">사용자들에게 이 디자인을 공개하지 않습니다.</string>

    <string name="design_detail_date">택배 수령 후 %d-%d일정도의 제작기간이 소요됩니다.\n제작 완료 시 택배사 사정에 따라 배송시간이 달라질 수 있습니다</string>

    <!--sigin up-->
    <string name="attention">사전에 이메일로 받으신 코드번호를 입력 후 인증하기 버튼을 눌러 인증해주세요. 수상한수선집은 사전 승인 후 가입할 수 있습니다. 사전 승인을 원하시는 경우, 입점신청 페이지에서 신청해주세요.</string>
    <string name="attention_pw">영문, 숫자, 특수문자 중 2종류 이상을 조합하여 8~16자 길이로 구성</string>
    <string name="signup_result">가입을 환영합니다!</string>

    <!--adjustment-->
    <string name="adjustment_bank_warning">지급일은 매월 15일이며, 전월 1일부터 말일까지 발생한 수선 완료건에 한하여 이루어집니다. 정산일 이후 취소 및 환불이 발생하는 경우 익월 정산 금액에서 처리됩니다.</string>

    <!--account-->
    <string name="account_item_0">로그아웃</string>
    <string name="account_item_1">운영일시정지</string>
    <string name="account_item_3">운영개시</string>
    <string name="account_item_2">탈퇴신청</string>

    <string name="account_dialog_stop_title">운영을 정지하시겠습니까?</string>
    <string name="account_dialog_stop_subtext">더이상 의뢰를 받을 수 없으며\n운영을 정지해도 현재 진행중인 주문을 취소할 수 없습니다.</string>
    <string name="account_dialog_start_title">운영을 개시하시겠습니까? </string>
    <string name="account_dialog_start_subtext">이제 다시 의뢰를 받을 수 있습니다.</string>
    <string name="account_dialog_button_cancel">취소</string>
    <string name="account_dialog_button_stop">운영정지</string>
    <string name="account_dialog_button_start">운영개시</string>

    <string name="account_dialog_withdraw_title">탈퇴신청</string>
    <string name="account_dialog_withdraw_sub_title">탈퇴신청사유</string>
    <string name="account_dialog_withdraw_warning_title">아래 안내를 확인해주세요.</string>
    <string name="account_dialog_withdraw_warning_text">탈퇴 후 모든 기록은 삭제되어 복구할 수 없으며, 탈퇴 후 다음 정산일에는 잔여 정산 금액이 처리됩니다.</string>


    <!--withdraw-->
    <string name="withdraw_dialog_title">탈퇴신청이 완료되었습니다.</string>
    <string name="withdraw_dialog_subtext">회원 탈퇴는 시간이 소요됩니다.\n담당자가 신청 내용을 검토 후 연락드릴 예정입니다.</string>
    <string name="withdraw_dialog_btn">확인</string>

    <string name="unit_no">No. %s</string>


    <!--term-->
    <string name="term_tab_0">이용약관</string>
    <string name="term_tab_1">개인정보처리방침</string>
    <string name="term_tab_2">오픈소스라이선스</string>
    <!--    <string name="unit_won">%d원</string>-->

    <!--error-->
    <string name="network_error">일시적인 문제가 발생했습니다.\n\n이 오류는 잘못된 접근을 했거나 인터넷 연결이\n원활하지 않을 경우 만날 수 있습니다.\n인터넷 연결을 확인 후 다시 시도해 주세요.\n\n이 오류가 반복된다면 ‘문의하기’를 통해\n문제를 해결할 수 있습니다.</string>

    <string-array name="order_sort">
        <item>전체보기</item>
        <item>신규</item>
        <item>진행중</item>
        <item>완료</item>
    </string-array>

    <string name="image_indicator">%d / %d</string>
</resources>