<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/orderFragment"
        android:icon="@drawable/selector_nav_order"
        android:title="@string/bottom_nav_item_0" />
<!--    <item-->
<!--        android:id="@id/csFragment"-->
<!--        android:icon="@drawable/icon_cs_selector"-->
<!--        android:title="@string/bottom_nav_item_1" />-->
        <item
            android:id="@+id/designFragment"
            android:icon="@drawable/selector_nav_design"
            android:title="@string/bottom_nav_item_2" />
<!--    <item-->
<!--        android:id="@+id/productFragment"-->
<!--        android:icon="@drawable/icon_product_selector"-->
<!--        android:title="@string/bottom_nav_item_2" />-->
    <item
        android:id="@id/navigation_more"
        android:icon="@drawable/selector_nav_more"
        android:title="@string/bottom_nav_item_3" />
</menu>