<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/toolbar"
            layout="@layout/layout_activity_toolbar"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="#666666"
            app:tabSelectedTextColor="#000000"
            app:tabIndicatorColor="#000000">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_tab_0"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_tab_1"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_tab_2"/>
        </com.google.android.material.tabs.TabLayout>
        <WebView
            android:id="@+id/wb_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>
