<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/tv_top_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/dialog_service_check_0"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_top_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/tv_top_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/dialog_service_check_1"/>
    <TextView
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_top_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/tv_top_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/dialog_service_check_2"/>

    <LinearLayout
        android:id="@+id/ll_confirm"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@id/tv_top_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/color_2f389f">

        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="확인"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>