<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.design.DesignFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/sky_2"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_gravity="top"
                    app:layout_collapseMode="parallax"
                    android:background="@color/sky_2"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:gravity="top"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:orientation="horizontal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/BoldText"
                            android:text="디자인"
                            android:textSize="20dp"
                            android:layout_weight="1"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_design_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/RedSmallRoundBtn"

                            android:text="@string/design_blank_btn"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="pin"
                    android:orientation="vertical"
                    android:background="@color/gray_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>
                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/top_tab"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        app:tabMinWidth="78dp"
                        app:tabIndicator="@null"
                        app:tabGravity="center"
                        app:tabPaddingStart="20dp"
                        app:tabMode="scrollable"
                        app:tabPaddingEnd="20dp"
                        app:tabPaddingTop="0dp"
                        app:tabPaddingBottom="0dp"
                        style="@style/TabDesignList"
                        app:layout_constraintTop_toBottomOf="@id/tv_top_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/design_top_tab_0"/>
                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/design_top_tab_1"/>
                        <com.google.android.material.tabs.TabItem
                            android:layout_marginStart="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/design_top_tab_2"/>
                    </com.google.android.material.tabs.TabLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/ll_blank_item"
            android:background="@color/gray_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.35"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error_emoji"/>

                <TextView
                    style="@style/BoldText"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/design_blank_big"
                    android:textSize="20dp" />
                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:text="@string/design_blank_small"/>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/SkyBigRoundBtn"
                    android:layout_marginTop="36dp"
                    android:id="@+id/btn_design_add_1"
                    android:textColor="@color/selector_btn_sky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/design_blank_btn"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <LinearLayout-->
<!--            android:background="@color/gray_1"-->
<!--            android:visibility="visible"-->
<!--            android:id="@+id/ll_exist_item"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:background="@color/gray_1"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/sw_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:layoutAnimation="@anim/layout_animation_fall_down"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:id="@+id/rv_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:listitem="@layout/layout_design_item"
                        tools:itemCount="5"/>
                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
<!--        </LinearLayout>-->
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
